syntax = "proto3";

package inventory;

service InventoryService {
  rpc AddInventoryItem (AddInventoryItemRequest) returns (InventoryItem) {}
  rpc UpdateInventoryItem (UpdateInventoryItemRequest) returns (InventoryItem) {}
  rpc GetInventoryItem (GetInventoryItemRequest) returns (InventoryItem) {}
  rpc ListInventoryItems (ListInventoryItemsRequest) returns (ListInventoryItemsResponse) {}
  rpc DeleteInventoryItem (DeleteInventoryItemRequest) returns (DeleteInventoryItemResponse) {}
  rpc AdjustInventoryQuantity (AdjustInventoryQuantityRequest) returns (InventoryItem) {}
  rpc LogInventoryChange (LogInventoryChangeRequest) returns (InventoryLog) {}
  rpc GetInventoryLogs (GetInventoryLogsRequest) returns (GetInventoryLogsResponse) {}
}

message InventoryItem {
  string id = 1;
  string warehouseId = 2;
  string name = 3;
  string description = 4;
  string category = 5;
  string sku = 6;
  int32 quantity = 7;
  double unitPrice = 8;
  string unit = 9;
  string status = 10;
  string lastUpdated = 11;
  map<string, string> meta = 12;
}

message InventoryLog {
  string id = 1;
  string warehouseId = 2;
  string itemId = 3;
  string changeType = 4;
  int32 quantityBefore = 5;
  int32 quantityAfter = 6;
  int32 quantityChanged = 7;
  string reason = 8;
  string reference = 9;
  string userId = 10;
  string timestamp = 11;
}

message AddInventoryItemRequest {
  string warehouseId = 1;
  InventoryItem item = 2;
}

message UpdateInventoryItemRequest {
  string warehouseId = 1;
  string itemId = 2;
  InventoryItem item = 3;
}

message GetInventoryItemRequest {
  string warehouseId = 1;
  string itemId = 2;
}

message ListInventoryItemsRequest {
  string warehouseId = 1;
  string category = 2;
  string status = 3;
  int32 page = 4;
  int32 limit = 5;
}

message ListInventoryItemsResponse {
  repeated InventoryItem items = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteInventoryItemRequest {
  string warehouseId = 1;
  string itemId = 2;
}

message DeleteInventoryItemResponse {
  bool success = 1;
  string message = 2;
}

message AdjustInventoryQuantityRequest {
  string warehouseId = 1;
  string itemId = 2;
  int32 adjustment = 3;
  string reason = 4;
  string reference = 5;
  string userId = 6;
}

message LogInventoryChangeRequest {
  InventoryLog log = 1;
}

message GetInventoryLogsRequest {
  string warehouseId = 1;
  string itemId = 2;
  string startDate = 3;
  string endDate = 4;
  string changeType = 5;
  int32 page = 6;
  int32 limit = 7;
}

message GetInventoryLogsResponse {
  repeated InventoryLog logs = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}
